--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         applicationId "com.seuic.uhfdemo"
         minSdkVersion 18
         targetSdkVersion 34
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -32,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+    implementation("androidx.multidex:multidex:2.0.1")
 }
